# c2022-a

./: Hello World.cpp  Hello World.sln  README.md  五子棋AI实验报告.docx  加密2.0.c  加密解密.cpp  哥德巴赫.cpp  完成 running letter  密码，教材p96.cpp  推箱子.cpp  更新  水仙花数.cpp  河内塔.cpp  素数判断plus.cpp  跑动的字符  跑动的字符.cpp  迷宫.cpp  链表.cpp
level0/: 7的倍数或尾数为7  (+25 more)
实验/: AI.cpp  AI.h  AI实现.cpp  Board.cpp  Board.h  CMakeLists.txt  Chess.cpp  Chess.h  Chess.rc  ChessData.cpp  ChessData.h  C语言五子棋实验报告.doc  C语言实验报告.md  GUI.cpp  GUI.h  GameInit.cpp  GameInit.h  Init.cpp  Init.h  MyGo_bang.cpp  MyGo_bang.md  README.md  Score.cpp  Score.h  Source.cpp  UI.cpp  UI.h  check.cpp  check.h  chess.cpp  chess.h  col.cpp  col.h  hum.cpp  hum.h  kill.cpp  kill.h  main.cpp  picture.cpp  poi.h  (+26 more)
实验/FIR/: AI.cpp  AI.h  Basic.h  FIR.cpp  Human.h  Stack.h  basic.cpp  human.cpp  stack.cpp
实验/FiveChess/: FiveChess.sln  FiveChess.vcxproj  FiveChess.vcxproj.filters  resource.h
实验/FiveinaRow/: AI.cpp  AI2.cpp  AIVSAI.cpp  Draw.cpp  FiveinaLow.sln  FiveinaLow.vcxproj  FiveinaLow.vcxproj.filters  FiveinaRow.cpp  PieceSet.cpp  playerVSAI.cpp  playerVSplayer.cpp  title.h
实验/MyWUZIQI/: MyWUZIQI.sln  五子棋实验报告 2022080904025 蒲志豪.doc
实验/Sakura/: ChessData.cpp  ChessData.h  Sakura.sln  Sakura.vcxproj  Sakura.vcxproj.filters  main.cpp  tools.cpp  tools.h  实验报告.docx
实验/newest/: newest.sln
实验/五子棋/: C2022五子棋实验报告.docx  WuZiChess.verison2.sln  五子棋.cpp  五子棋.sln  五子棋.vcxproj  五子棋.vcxproj.filters
实验/五子棋-my first project/: 五子棋.sln
实验/五子棋2.0/: 五子棋2.0.sln
实验/五子棋AI实验报告/: AI五子棋AI_实验报告.md  AI五子棋思维导图.km  五子棋AI_实验报告.md
实验/五子棋ai - 最终版本/: 五子棋ai.sln
(+709 files in other folders)
